# Mr.Apple

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: mcp_servers.example.json
mr_apple/: core.py  main.py  mcp.py  terminal_app.py  textual_app.py
